# repo-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  categories.json  docker-compose.yml  env.example  pyproject.toml  requirements.txt
data/: taxonomy.json
scripts/: test.sh
src/repo_classifier/: __init__.py  analyzer.py  app.py  config.py  github_client.py  ingest.py  rag.py
src/reporank/: analyzer.py  app.py  cache.py  github_client.py  ingest.py  rag.py
