[project]
name = "repo-classifier"
version = "1.0.0"
description = "RAG-based GitHub repository classifier with x402 payment gating"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Repo Classifier Team" }
]
keywords = ["github", "classifier", "rag", "llm", "openai", "fastapi"]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Async HTTP client
    "httpx>=0.25.0",
    
    # Vector database
    "chromadb>=0.4.0",
    
    # OpenAI (embeddings + LLM)
    "openai>=1.0.0",
    
    # Payment protocol (optional but included)
    "x402>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
repo-classifier = "repo_classifier.app:main"
repo-classifier-ingest = "repo_classifier.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_classifier"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
